# pharmacoml

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.mplconfig/: fontlist-v390.json
benchmarks/: fixed_public_baseline.json  run_multimodel_consensus_benchmarks.py  run_public_benchmarks.py  tune_multimodel_consensus.py
docs/: benchmarks.html  index.html  reference.html  site.css  site.js  tutorial.html
examples/: comparison_pydarwin.py  comparison_quetiapine_literature.py  experimental_consensus.py  hybrid_quickstart.py  quickstart.py
pharmacoml/: __init__.py  automl.py
pharmacoml/covselect/: __init__.py  adaptive.py  benchmark.py  dimreduce.py  engines.py  ensemble.py  functional_form.py  hybrid.py  penalized.py  public_benchmarks.py  results.py  scm.py  screener.py  selection_utils.py  shapcov.py  significance.py  stg.py  symbolic.py  traditional.py
pharmacoml/covselect/experimental/: __init__.py  consensus.py  ensemble.py
pharmacoml/data/: __init__.py
pharmacoml/expose/: __init__.py
pharmacoml/trajpk/: __init__.py
pharmacoml/utils/: __init__.py
tests/test_covselect/: _helpers.py  test_benchmark_reports.py  test_comprehensive.py  test_ensemble.py  test_experimental_consensus.py  test_hybrid.py  test_hybrid_extensions.py  test_screener.py  test_selection_utils.py
