[build-system]
requires = ["setuptools>=77.0", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacoml"
version = "0.1.1"
description = "ML-Enhanced Pharmacometrics Toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{name = "Sai Rani"}]
keywords = ["pharmacometrics", "machine-learning", "covariate-selection", "SHAP", "population-PK", "NONMEM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = ["numpy>=1.24", "pandas>=2.0", "scikit-learn>=1.3", "xgboost>=1.7", "lightgbm>=4.0", "catboost>=1.2", "shap>=0.42", "matplotlib>=3.7", "scipy>=1.10", "statsmodels>=0.14"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1"]
dl = ["pytorch-tabnet>=4.0", "torch>=2.0"]
symbolic = ["gplearn>=0.4.2", "pysr>=1.5.9"]
all = ["pytorch-tabnet>=4.0", "torch>=2.0", "gplearn>=0.4.2", "pysr>=1.5.9"]

[project.urls]
Repository = "https://github.com/s-rani1/pharmacoml"

[tool.setuptools.packages.find]
include = ["pharmacoml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
